[package]
name = "vozclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.193", features = ["derive"] }
serde_json = "1.0.108"
select = "0.6.0"
nom = "7.1.3"
reqwest = "0.11.23"
tokio = { version="1.35.1", features = ["full"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl-sys = "0.9.97"
