[package]
name = "vozclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.193", features = ["derive"] }
serde_json = "1.0.108"
select = { git = "https://github.com/Billy-Sheppard/select.rs.git", branch = "add-send" }
nom = "7.1.3"
reqwest = { version="0.11.23", features = ['cookies'] }
tokio = { version="1.35.1", features = ["full"] }
reqwest_cookie_store = "0.6.0"
async-trait = "0.1.77"
task-local-extensions = "0.1.4"
reqwest-middleware = "0.2.4"
anyhow = "1.0.79"
